--- a/IfService/.settings/org.eclipse.wst.common.component
+++ b/IfService/.settings/org.eclipse.wst.common.component
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="IfShare">
-                
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <property name="java-output-path" value="/IfShare/build/classes"/>
-        <property name="context-root" value="IfShare"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="IfService">
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                        
+        
+        <property name="java-output-path" value="/IfService/build/classes"/>
+        <property name="context-root" value="IfService"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
