--- a/IfServiceWebApp/src/main/resources/static/css/style.css
+++ b/IfServiceWebApp/src/main/resources/static/css/style.css
@@ -11,7 +11,7 @@ h1 a {
 }
 
 button {
-    margin: 25px 0;
+    margin: 25px;
     font-family: "Gotham", sans-serif;
 }
 
@@ -30,6 +30,7 @@ button {
 .flex-y {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .spacer {
@@ -55,16 +56,19 @@ button {
 .input-box {
     font-family: "Raleway", serif;
     margin: 20px;
-    width: 80%;
     display: inline-block;
 }
 
-.input-box input {
+.input-box input:text {
     width: 150px;
 }
 
 .form-box {
     width: 225px;
+}
+
+.large-form-box {
+    width: 500px;
 }
 
 .error-msg {
@@ -76,7 +80,9 @@ button {
     text-align: center;
     max-width: 300px;
     display: inline-block;
-    border: solid rgb(200, 200, 230) 5px;
+    color: rgb(50, 100, 120);
+    border: solid rgb(200, 220, 230) 5px;
+    background-color: rgb(235, 245, 250);
     padding: 10px;
     border-radius: 10px;
     transform: scale(0.8);
@@ -85,4 +91,20 @@ button {
 .advertising h1 {
     margin-bottom: 0;
     color: rgb(100, 100, 225);
+}
+
+
+.menu {
+    padding: 15px;
+    border-radius: 25px;
+    background-color: rgb(150, 210, 230);
+}
+
+.menu a {
+    color: white;
+    background-color: rgb(100, 175, 200);
+    border-radius: 10px;
+    padding: 10px;
+    font-weight: bold;
+    text-decoration: none;
 }
